@@ -911,6 +911,7 @@ OpenXML_TRANSLATE_EXCEL_COMMENTS=Comme&nts
 OpenXML_POWER_POINT=Power Point
 OpenXML_TRANSLATE_SLIDE_COMMENTS=&Slide Comments
 OpenXML_TRANSLATE_SLIDE_MASTERS=Sli&de Masters
+OpenXML_TRANSLATE_SLIDE_LAYOUTS=Slide &Layouts
 
 OpenXML_ERROR_IN_FILE=Error in file
 
